[gd_scene load_steps=3 format=3 uid="uid://cwisd7yfiy1bp"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_bp2t1"]
[ext_resource type="FontFile" uid="uid://cb3gcyu5jwksh" path="res://Fonts/PixelOperator8-Bold.ttf" id="2_5p3t4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp2t1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -87.5
offset_right = 128.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="DeckButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5p3t4")
theme_override_font_sizes/font_size = 32
text = "Deck"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5p3t4")
theme_override_font_sizes/font_size = 32
text = "Shop"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5p3t4")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="VBoxContainer/DeckButton" to="." method="OnDeckButtonPressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="OnShopButtonPressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="OnQuitButtonPressed"]
